Button makes brr

--- a/VisibleConfusion/App.xaml
+++ b/VisibleConfusion/App.xaml
@@ -5,6 +5,12 @@
              xmlns:view="clr-namespace:VisibleConfusion.MVVM.View"
 	StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/Button.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
