--- a/VisibleConfusion/MVVM/View/SelectBar.xaml
+++ b/VisibleConfusion/MVVM/View/SelectBar.xaml
@@ -1,49 +1,17 @@
-﻿<UserControl
-	x:Class="VisibleConfusion.MVVM.View.SelectBar"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-	d:DesignWidth="400"
-	mc:Ignorable="d">
+﻿<UserControl x:Class="VisibleConfusion.MVVM.View.SelectBar"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+             d:DesignWidth="400"
+             mc:Ignorable="d">
 
-	<WrapPanel
-		Margin="1">
-		<WrapPanel.Resources>
-			<Style
-				TargetType="{x:Type Button}">
-				<Setter
-					Property="Margin"
-					Value="3,1" />
-				<Setter
-					Property="Padding"
-					Value="0,3" />
-				<Setter
-					Property="Background"
-					Value="Aqua" />
-				<Setter
-					Property="FontWeight"
-					Value="Bold" />
-				<Setter
-					Property="Width"
-					Value="50" />
-				<Setter
-					Property="BorderThickness"
-					Value="1" />
-				<Setter
-					Property="BorderBrush"
-					Value="Azure" />
-				<Setter
-					Property="DockPanel.Dock"
-					Value="Left" />
-			</Style>
-		</WrapPanel.Resources>
-		<Button>Grafika</Button>
-		<Button>Kamera</Button>
-		<Button>Z pliku</Button>
-		<Button
-			HorizontalAlignment="Right">Czyść</Button>
+    <WrapPanel Margin="1">
+        <Button>Grafika</Button>
+        <Button>Kamera</Button>
+        <Button>Z pliku</Button>
+        <Button>Czyść</Button>
 
-	</WrapPanel>
+    </WrapPanel>
 </UserControl>
