Button Style makes brrr Drop shadow is shadowing my overall competence

--- a/VisibleConfusion/App.xaml
+++ b/VisibleConfusion/App.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/Button.xaml" />
+                <ResourceDictionary Source="/Image.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
