--- a/VisibleConfusion/theme/Button.xaml
+++ b/VisibleConfusion/theme/Button.xaml
@@ -1,151 +1,122 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:converters="clr-namespace:VisibleConfusion.Converters">
-	<converters:ColorConverter
-		x:Key="ColorConverter" />
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:converters="clr-namespace:VisibleConfusion.Converters">
+    <converters:ColorConverter x:Key="ColorConverter" />
 
-	<Style
-		x:Key="FocusVisual">
-		<Setter
-			Property="Control.Template">
-			<Setter.Value>
-				<ControlTemplate>
-					<Rectangle
-						Margin="2"
-						StrokeDashArray="1 2"
-						Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
-						SnapsToDevicePixels="true"
-						StrokeThickness="1" />
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
-	<SolidColorBrush
-		x:Key="Button.Static.Background"
-		Color="{Binding Source={x:Static SystemParameters.WindowGlassColor},Converter={StaticResource ColorConverter}}"/>
-	<SolidColorBrush
-		x:Key="Button.Static.Border"
-		Color="#FF707070" />
-	<SolidColorBrush
-		x:Key="Button.MouseOver.Background"
-		Color="#FFBEE6FD" />
-	<SolidColorBrush
-		x:Key="Button.MouseOver.Border"
-		Color="#FF3C7FB1" />
-	<SolidColorBrush
-		x:Key="Button.Pressed.Background"
-		Color="#FFC4E5F6" />
-	<SolidColorBrush
-		x:Key="Button.Pressed.Border"
-		Color="#FF2C628B" />
-	<SolidColorBrush
-		x:Key="Button.Disabled.Background"
-		Color="#FFF4F4F4" />
-	<SolidColorBrush
-		x:Key="Button.Disabled.Border"
-		Color="#FFADB2B5" />
-	<SolidColorBrush
-		x:Key="Button.Disabled.Foreground"
-		Color="#FF838383" />
-	<Style
-		TargetType="{x:Type Button}">
-		<Setter
-			Property="FocusVisualStyle"
-			Value="{StaticResource FocusVisual}" />
-		<Setter
-			Property="Background"
-			Value="{StaticResource Button.Static.Background}" />
-		<Setter
-			Property="BorderBrush"
-			Value="{StaticResource Button.Static.Border}" />
-		<Setter
-			Property="Foreground"
-			Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-		<Setter
-			Property="BorderThickness"
-			Value="1" />
-		<Setter
-			Property="HorizontalContentAlignment"
-			Value="Center" />
-		<Setter
-			Property="VerticalContentAlignment"
-			Value="Center" />
-		<Setter
-			Property="Padding"
-			Value="1" />
-		<Setter
-			Property="Template">
-			<Setter.Value>
-				<ControlTemplate
-					TargetType="{x:Type Button}">
-					<Border
-						x:Name="border"
-						Background="{TemplateBinding Background}"
-						BorderBrush="{TemplateBinding BorderBrush}"
-						BorderThickness="{TemplateBinding BorderThickness}"
-						SnapsToDevicePixels="true">
-						<ContentPresenter
-							x:Name="contentPresenter"
-							Focusable="False"
-							HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-							Margin="{TemplateBinding Padding}"
-							RecognizesAccessKey="True"
-							SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-							VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-					</Border>
-					<ControlTemplate.Triggers>
-						<Trigger
-							Property="IsDefaulted"
-							Value="true">
-							<Setter
-								Property="BorderBrush"
-								TargetName="border"
-								Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-						</Trigger>
-						<Trigger
-							Property="IsMouseOver"
-							Value="true">
-							<Setter
-								Property="Background"
-								TargetName="border"
-								Value="{StaticResource Button.MouseOver.Background}" />
-							<Setter
-								Property="BorderBrush"
-								TargetName="border"
-								Value="{StaticResource Button.MouseOver.Border}" />
-						</Trigger>
-						<Trigger
-							Property="IsPressed"
-							Value="true">
-							<Setter
-								Property="Background"
-								TargetName="border"
-								Value="{StaticResource Button.Pressed.Background}" />
-							<Setter
-								Property="BorderBrush"
-								TargetName="border"
-								Value="{StaticResource Button.Pressed.Border}" />
-						</Trigger>
-						<Trigger
-							Property="IsEnabled"
-							Value="false">
-							<Setter
-								Property="Background"
-								TargetName="border"
-								Value="{StaticResource Button.Disabled.Background}" />
-							<Setter
-								Property="BorderBrush"
-								TargetName="border"
-								Value="{StaticResource Button.Disabled.Border}" />
-							<Setter
-								Property="TextElement.Foreground"
-								TargetName="contentPresenter"
-								Value="{StaticResource Button.Disabled.Foreground}" />
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
+    <Style x:Key="FocusVisual">
+        <Setter Property="Control.Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Rectangle Margin="2"
+                               StrokeDashArray="1 2"
+                               Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+                               SnapsToDevicePixels="true"
+                               StrokeThickness="1"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <SolidColorBrush x:Key="AccentColor"
+                     Color="{Binding Source={x:Static SystemParameters.WindowGlassColor},Converter={StaticResource ColorConverter}}" />
+    <SolidColorBrush x:Key="BackgroundColor"
+                     Color="#0C0C0C" />
+    <SolidColorBrush x:Key="HoverColor"
+                     Color="#FF0000" />
+    <SolidColorBrush x:Key="ElementColor"
+                     Color="#000" />
+    <SolidColorBrush x:Key="ForegroundColor"
+                     Color="#282828" />
+    <SolidColorBrush x:Key="TextColor"
+                     Color="#FFF" />
+    <SolidColorBrush x:Key="DisabledColor"
+                     Color="#FF00FF" />
+    <Style TargetType="{x:Type Button}">
+        <Setter Property="FontWeight"
+                Value="Medium" />
+        <Setter Property="Button.Effect">
+            <Setter.Value>
+                <DropShadowEffect Color="Black"
+                                  Direction="270"
+                                  ShadowDepth="5"
+                                  BlurRadius="4"
+                                  Opacity="0.25"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="FocusVisualStyle"
+                Value="{StaticResource FocusVisual}" />
+        <Setter Property="Background"
+                Value="{StaticResource AccentColor}" />
+        <Setter Property="BorderBrush"
+                Value="{StaticResource AccentColor}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource ElementColor}" />
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Center" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Center" />
+        <Setter Property="Padding"
+                Value="24,8" />
+        <Setter Property="Margin"
+                Value="1" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="border"
+                            CornerRadius="5"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="true">
+                        <ContentPresenter x:Name="contentPresenter"
+                                          Focusable="False"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          Margin="{TemplateBinding Padding}"
+                                          RecognizesAccessKey="True"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsDefaulted"
+                                 Value="true">
+                            <Setter Property="BorderBrush"
+                                    TargetName="border"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver"
+                                 Value="true">
+                            <Setter Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource HoverColor}" />
+                            <Setter Property="BorderBrush"
+                                    TargetName="border"
+                                    Value="{StaticResource HoverColor}" />
+                        </Trigger>
+                        <Trigger Property="IsPressed"
+                                 Value="true">
+                            <Setter Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource AccentColor}" />
+                            <Setter Property="BorderBrush"
+                                    TargetName="border"
+                                    Value="{StaticResource AccentColor}" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled"
+                                 Value="false">
+                            <Setter Property="Background"
+                                    TargetName="border"
+                                    Value="{StaticResource DisabledColor}" />
+                            <Setter Property="BorderBrush"
+                                    TargetName="border"
+                                    Value="{StaticResource DisabledColor}" />
+                            <Setter Property="TextElement.Foreground"
+                                    TargetName="contentPresenter"
+                                    Value="{StaticResource DisabledColor}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
