--- a/VisibleConfusion/MVVM/View/SelectBar.xaml
+++ b/VisibleConfusion/MVVM/View/SelectBar.xaml
@@ -4,14 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-             d:DesignWidth="400"
+             d:DesignWidth="600"
              mc:Ignorable="d">
 
     <WrapPanel Margin="1">
         <Button>Grafika</Button>
         <Button>Kamera</Button>
         <Button>Z pliku</Button>
-        <Button>Czyść</Button>
-
+        <CheckBox>Checkboksik</CheckBox>
     </WrapPanel>
 </UserControl>
