--- a/VisibleConfusion/theme/Button.xaml
+++ b/VisibleConfusion/theme/Button.xaml
@@ -1,7 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="clr-namespace:VisibleConfusion.Converters">
-    <converters:ColorConverter x:Key="ColorConverter" />
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
@@ -11,37 +9,16 @@
                                StrokeDashArray="1 2"
                                Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
                                SnapsToDevicePixels="true"
-                               StrokeThickness="1"/>
+                               StrokeThickness="1" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    <SolidColorBrush x:Key="AccentColor"
-                     Color="{Binding Source={x:Static SystemParameters.WindowGlassColor},Converter={StaticResource ColorConverter}}" />
-    <SolidColorBrush x:Key="BackgroundColor"
-                     Color="#0C0C0C" />
-    <SolidColorBrush x:Key="HoverColor"
-                     Color="#FF0000" />
-    <SolidColorBrush x:Key="ElementColor"
-                     Color="#000" />
-    <SolidColorBrush x:Key="ForegroundColor"
-                     Color="#282828" />
-    <SolidColorBrush x:Key="TextColor"
-                     Color="#FFF" />
-    <SolidColorBrush x:Key="DisabledColor"
-                     Color="#FF00FF" />
     <Style TargetType="{x:Type Button}">
         <Setter Property="FontWeight"
                 Value="Medium" />
-        <Setter Property="Button.Effect">
-            <Setter.Value>
-                <DropShadowEffect Color="Black"
-                                  Direction="270"
-                                  ShadowDepth="5"
-                                  BlurRadius="4"
-                                  Opacity="0.25"/>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Effect"
+                Value="{StaticResource dropShadow}" />
         <Setter Property="FocusVisualStyle"
                 Value="{StaticResource FocusVisual}" />
         <Setter Property="Background"
