--- a/VisibleConfusion/theme/Button.xaml
+++ b/VisibleConfusion/theme/Button.xaml
@@ -37,6 +37,10 @@
                 Value="24,8" />
         <Setter Property="Margin"
                 Value="1" />
+        <Setter Property="Width"
+                Value="100" />
+        <Setter Property="Height"
+                Value="32" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
