--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -1,46 +1,69 @@
-﻿<UserControl x:Class="VisibleConfusion.MVVM.View.PictureView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-             mc:Ignorable="d"
-             d:DesignHeight="450"
-             d:DesignWidth="800">
-    <DockPanel>
-        <local:SelectBar DockPanel.Dock="Top" />
-        <Grid DockPanel.Dock="Bottom"
-              HorizontalAlignment="Center">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBox Grid.Row="0"></TextBox>
-                <TextBox Grid.Row="1"></TextBox>
-            </Grid>
-            <Image Width="300"
-                   Height="200"
-                   Grid.Row="1" />
-            <Grid Grid.Row="2"
-                  HorizontalAlignment="Center">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="0">Czyść</Button>
-                <Button Grid.Column="1">Wykres</Button>
-            </Grid>
+﻿<UserControl
+	x:Class="VisibleConfusion.MVVM.View.PictureView"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+	xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
+	mc:Ignorable="d"
+	d:DesignHeight="400"
+	d:DesignWidth="400">
+	<UserControl.DataContext>
+		<viewModel:PictureViewModel />
+	</UserControl.DataContext>
+	<DockPanel>
+		<local:SelectBar
+			DockPanel.Dock="Top" />
+		<Grid
+			DockPanel.Dock="Bottom"
+			HorizontalAlignment="Center">
+			<Grid.RowDefinitions>
+				<RowDefinition
+					Height="auto" />
+				<RowDefinition
+					Height="auto" />
+				<RowDefinition
+					Height="auto" />
+				<RowDefinition
+					Height="auto" />
+			</Grid.RowDefinitions>
+			<Grid
+				Grid.Row="0">
+				<Grid.RowDefinitions>
+					<RowDefinition
+						Height="Auto" />
+					<RowDefinition
+						Height="Auto" />
+				</Grid.RowDefinitions>
+				<TextBox
+					Grid.Row="0"></TextBox>
+				<TextBox
+					Grid.Row="1"></TextBox>
+			</Grid>
+			<Image
+				Width="300"
+				Height="200"
+				Grid.Row="1" />
+			<Grid
+				Grid.Row="2"
+				HorizontalAlignment="Center">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition
+						Width="Auto" />
+					<ColumnDefinition
+						Width="Auto" />
+				</Grid.ColumnDefinitions>
+				<Button
+					Grid.Column="0">Czyść</Button>
+				<Button
+					Grid.Column="1">Wykres</Button>
+			</Grid>
 
-            <Image Width="300"
-                   Height="100"
-                   Grid.Row="3" />
-        </Grid>
-    </DockPanel>
+			<Image
+				Width="300"
+				Height="100"
+				Grid.Row="3" />
+		</Grid>
+	</DockPanel>
 </UserControl>
