--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -8,7 +8,7 @@
 	xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
 	mc:Ignorable="d"
 	d:DesignHeight="400"
-	d:DesignWidth="400">
+	d:DesignWidth="320">
 	<UserControl.DataContext>
 		<viewModel:PictureViewModel />
 	</UserControl.DataContext>
@@ -19,11 +19,20 @@
 			Margin="1"
 			VerticalAlignment="Center"
 			HorizontalAlignment="Center">
-			<Button>
+			<Button
+				Command="{Binding DrawByHandCommand}">
 				Grafika
 			</Button>
-			<Button>Z pliku</Button>
-			<Button>Kamera</Button>
+
+			<Button
+				Command="{Binding FromFileCommand}">
+				Z pliku
+			</Button>
+
+			<Button
+				Command="{Binding FromCameraCommand}">
+				Kamera
+			</Button>
 		</WrapPanel>
 
 		<Grid
@@ -53,6 +62,7 @@
 					Grid.Row="1"></TextBox>
 			</Grid>
 			<Image
+				Source="{Binding PictureBitmapSource}"
 				Width="300"
 				Height="200"
 				Grid.Row="1" />
@@ -65,16 +75,26 @@
 					<ColumnDefinition
 						Width="Auto" />
 				</Grid.ColumnDefinitions>
+
 				<Button
-					Grid.Column="0">Czyść</Button>
+					Grid.Column="0"
+					Command="{Binding CleanCommand}">
+					Czyść
+				</Button>
+
 				<Button
-					Grid.Column="1">Wykres</Button>
+					Grid.Column="1"
+					Command="{Binding DoGraphCommand}">
+					Wykres
+				</Button>
 			</Grid>
 
 			<Image
 				Width="300"
 				Height="100"
-				Grid.Row="3" />
+				Grid.Row="3"
+				Source="{Binding GraphBitmapSource}"
+				Stretch="Fill" />
 		</Grid>
 
 	</DockPanel>
