--- a/VisibleConfusion/theme/Resources.xaml
+++ b/VisibleConfusion/theme/Resources.xaml
@@ -13,8 +13,8 @@
                      Color="#000" />
     <SolidColorBrush x:Key="ForegroundColor"
                      Color="#282828" />
-    <SolidColorBrush x:Key="TextColor"
-                     Color="#FFF" />
+    <SolidColorBrush x:Key="TextColor_1"
+                     Color="White" />
     <SolidColorBrush x:Key="DisabledColor"
                      Color="#FF00FF" />
     <DropShadowEffect x:Key="dropShadow"
@@ -23,4 +23,5 @@
                       ShadowDepth="5"
                       BlurRadius="4"
                       Opacity="0.25" />
+
 </ResourceDictionary>
