--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -1,101 +1,106 @@
-﻿<UserControl
-	x:Class="VisibleConfusion.MVVM.View.PictureView"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-	xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
-	mc:Ignorable="d"
-	d:DesignHeight="400"
-	d:DesignWidth="320">
-	<UserControl.DataContext>
-		<viewModel:PictureViewModel />
-	</UserControl.DataContext>
-	<DockPanel>
+﻿<UserControl x:Class="VisibleConfusion.MVVM.View.PictureView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+             xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
+             mc:Ignorable="d"
+             d:DesignHeight="400"
+             d:DesignWidth="320">
+    <UserControl.DataContext>
+        <viewModel:PictureViewModel />
+    </UserControl.DataContext>
+    <DockPanel>
 
-		<WrapPanel
-			DockPanel.Dock="Top"
-			Margin="1"
-			VerticalAlignment="Center"
-			HorizontalAlignment="Center">
-			<Button
-				Command="{Binding DrawByHandCommand}">
-				Grafika
-			</Button>
+        <WrapPanel DockPanel.Dock="Top"
+                   Margin="1"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center">
+            <Button Command="{Binding DrawByHandCommand}">
+                Grafika
+            </Button>
 
-			<Button
-				Command="{Binding FromFileCommand}">
-				Z pliku
-			</Button>
+            <Button Command="{Binding FromFileCommand}">
+                Z pliku
+            </Button>
 
-			<Button
-				Command="{Binding FromCameraCommand}">
-				Kamera
-			</Button>
-		</WrapPanel>
+            <Button Command="{Binding FromCameraCommand}">
+                Kamera
+            </Button>
+        </WrapPanel>
 
-		<Grid
-			DockPanel.Dock="Bottom"
-			HorizontalAlignment="Center">
-			<Grid.RowDefinitions>
-				<RowDefinition
-					Height="auto" />
-				<RowDefinition
-					Height="auto" />
-				<RowDefinition
-					Height="auto" />
-				<RowDefinition
-					Height="auto" />
-			</Grid.RowDefinitions>
-			<Grid
-				Grid.Row="0">
-				<Grid.RowDefinitions>
-					<RowDefinition
-						Height="Auto" />
-					<RowDefinition
-						Height="Auto" />
-				</Grid.RowDefinitions>
-				<TextBox
-					Grid.Row="0"></TextBox>
-				<TextBox
-					Grid.Row="1"></TextBox>
-			</Grid>
-			<Image
-				Source="{Binding PictureBitmapSource}"
-				Width="300"
-				Height="200"
-				Grid.Row="1" />
-			<Grid
-				Grid.Row="2"
-				HorizontalAlignment="Center">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition
-						Width="Auto" />
-					<ColumnDefinition
-						Width="Auto" />
-				</Grid.ColumnDefinitions>
+        <Grid DockPanel.Dock="Bottom"
+              HorizontalAlignment="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
 
-				<Button
-					Grid.Column="0"
-					Command="{Binding CleanCommand}">
-					Czyść
-				</Button>
+                <TextBox Grid.Row="0"
+                         Grid.Column="1"></TextBox>
+                <TextBlock Grid.Column="0"
+                           Foreground="White">X:</TextBlock>
+                <TextBox Grid.Row="1"
+                         Grid.Column="1"></TextBox>
+                <TextBlock Grid.Column="0"
+                           Grid.Row="1"
+                           Foreground="White">Y:</TextBlock>
+                <TextBox Grid.Column="2"
+                         Grid.Row="1"></TextBox>
+                <TextBlock Grid.Column="2"
+                           Foreground="White">R</TextBlock>
+                <TextBox Grid.Column="3"
+                         Grid.Row="1"></TextBox>
+                <TextBlock Grid.Column="3"
+                           Foreground="White">G</TextBlock>
+                <TextBox Grid.Column="4"
+                         Grid.Row="1"></TextBox>
+                <TextBlock Grid.Column="4"
+                           Foreground="White">B</TextBlock>
+            </Grid>
+            <Image Source="{Binding PictureBitmapSource}"
+                   Width="300"
+                   Height="200"
+                   Grid.Row="1" />
+            <Grid Grid.Row="2"
+                  HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-				<Button
-					Grid.Column="1"
-					Command="{Binding DoGraphCommand}">
-					Wykres
-				</Button>
-			</Grid>
+                <Button Grid.Column="0"
+                        Command="{Binding CleanCommand}">
+                    Czyść
+                </Button>
 
-			<Image
-				Width="300"
-				Height="100"
-				Grid.Row="3"
-				Source="{Binding GraphBitmapSource}"
-				Stretch="Fill" />
-		</Grid>
+                <Button Grid.Column="1"
+                        Command="{Binding DoGraphCommand}">
+                    Wykres
+                </Button>
+            </Grid>
 
-	</DockPanel>
+            <Image Width="300"
+                   Height="100"
+                   Grid.Row="3"
+                   Source="{Binding GraphBitmapSource}"
+                   Stretch="Fill" />
+        </Grid>
+
+    </DockPanel>
 </UserControl>
