--- a/VisibleConfusion/theme/CheckBox.xaml
+++ b/VisibleConfusion/theme/CheckBox.xaml
@@ -64,8 +64,9 @@
                 Value="{StaticResource AccentColor}" />
         <Setter Property="Foreground"
                 Value="{StaticResource TextColor_1}" />
+        <Setter Property="Margin"
+                Value="3" />
         <Setter Property="Template">
-
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type CheckBox}">
                     <Grid x:Name="templateRoot"
