--- a/VisibleConfusion/MVVM/View/ThingsBetwixt.xaml
+++ b/VisibleConfusion/MVVM/View/ThingsBetwixt.xaml
@@ -27,7 +27,11 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Button>
-                W prawo
+                <Control Style="{StaticResource RightArrow}"
+                         RenderTransformOrigin="1,1"
+                         Height="20"
+                         Width="20">
+                </Control>
             </Button>
             <CheckBox Grid.Row="1"
                       HorizontalAlignment="Center">R</CheckBox>
@@ -35,7 +39,13 @@
                       HorizontalAlignment="Center">G</CheckBox>
             <CheckBox Grid.Row="3"
                       HorizontalAlignment="Center">B</CheckBox>
-            <Button Grid.Row="4">W lewo</Button>
+            <Button Grid.Row="4">
+                <Control Style="{StaticResource LeftArrow}"
+                         RenderTransformOrigin="1,1"
+                         Height="20"
+                         Width="20">
+                </Control>
+            </Button>
             <Button Grid.Row="5">Mono</Button>
         </Grid>
 
