--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
              xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d"
              d:DesignWidth="310"
              Height="444">
@@ -51,26 +52,75 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <TextBox Grid.Row="0"
-                         Grid.Column="1"></TextBox>
+	            <xctk:IntegerUpDown
+		            ParsingNumberStyle="HexNumber"
+		            FormatString="X"
+		            VerticalAlignment="Center"
+					HorizontalAlignment="Center"
+					Grid.Row="0"
+		            Grid.Column="1" 
+		            Minimum="0"
+		            DefaultValue="0"
+		            ClipValueToMinMax="True"
+		            AllowSpin="True"/>
+
                 <TextBlock Grid.Column="0"
                            Foreground="White">X:</TextBlock>
-                <TextBox Grid.Row="1"
-                         Grid.Column="1"></TextBox>
-                <TextBlock Grid.Column="0"
+				<xctk:IntegerUpDown
+					ParsingNumberStyle="HexNumber"
+					FormatString="X"
+					VerticalAlignment="Center"
+					HorizontalAlignment="Center"
+					Grid.Row="1"
+					Grid.Column="1"
+					Minimum="0"
+					DefaultValue="0"
+					ClipValueToMinMax="True"
+					AllowSpin="True" />
+				<TextBlock Grid.Column="0"
                            Grid.Row="1"
                            Foreground="White">Y:</TextBlock>
-                <TextBox Grid.Column="2"
-                         Grid.Row="1"></TextBox>
-                <TextBlock Grid.Column="2"
+				<xctk:IntegerUpDown
+					ParsingNumberStyle="HexNumber"
+					FormatString="X"
+					VerticalAlignment="Center"
+					HorizontalAlignment="Center"
+					Grid.Row="1"
+					Grid.Column="2"
+					Minimum="0"
+					DefaultValue="0"
+					ClipValueToMinMax="True"
+					AllowSpin="True"
+					Maximum="255" />
+				<TextBlock Grid.Column="2"
                            Foreground="White">R</TextBlock>
-                <TextBox Grid.Column="3"
-                         Grid.Row="1"></TextBox>
-                <TextBlock Grid.Column="3"
+				<xctk:IntegerUpDown
+					ParsingNumberStyle="HexNumber"
+					FormatString="X"
+					VerticalAlignment="Center"
+					HorizontalAlignment="Center"
+					Grid.Row="1"
+					Grid.Column="3"
+					Minimum="0"
+					DefaultValue="0"
+					ClipValueToMinMax="True"
+					AllowSpin="True"
+					Maximum="255" />
+				<TextBlock Grid.Column="3"
                            Foreground="White">G</TextBlock>
-                <TextBox Grid.Column="4"
-                         Grid.Row="1"></TextBox>
-                <TextBlock Grid.Column="4"
+				<xctk:IntegerUpDown
+					ParsingNumberStyle="HexNumber"
+					FormatString="X"
+					VerticalAlignment="Center"
+					HorizontalAlignment="Center"
+					Grid.Row="1"
+					Grid.Column="4"
+					Minimum="0"
+					DefaultValue="0"
+					ClipValueToMinMax="True"
+					AllowSpin="True"
+					Maximum="255"/>
+				<TextBlock Grid.Column="4"
                            Foreground="White">B</TextBlock>
             </Grid>
             <Border Grid.Row="1"
