Camera Capture fully implemented (I think)

--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -32,6 +32,7 @@
 			</Button>
 
 			<Button
+				IsEnabled="{Binding CameraButtonEnabled}"
 				Command="{Binding FromCameraCommand}">
 				Kamera
 			</Button>
