CSS>>> Długo nic >>> Gówno >>> XAML

--- a/VisibleConfusion/theme/Button.xaml
+++ b/VisibleConfusion/theme/Button.xaml
@@ -78,10 +78,10 @@
                                  Value="true">
                             <Setter Property="Background"
                                     TargetName="border"
-                                    Value="{StaticResource AccentColor}" />
+                                    Value="{StaticResource HoverColor}" />
                             <Setter Property="BorderBrush"
                                     TargetName="border"
-                                    Value="{StaticResource AccentColor}" />
+                                    Value="{StaticResource HoverColor}" />
                         </Trigger>
                         <Trigger Property="IsEnabled"
                                  Value="false">
