--- a/VisibleConfusion/MainWindow.xaml
+++ b/VisibleConfusion/MainWindow.xaml
@@ -6,18 +6,20 @@
         xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
         mc:Ignorable="d"
         Title="MainWindow"
-        Height="550"
-        MinWidth="400"
+        Height="500"
+        MinWidth="500"
         MinHeight="100"
-        Width="900">
-    <Grid Background="#0c0c0c">
+        Width="800">
+    <Grid Background="#111">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1.5*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1.5*" />
         </Grid.ColumnDefinitions>
-        <local:PictureView />
-        <local:ThingsBetwixt Grid.Column="1"/>
-        <local:PictureView Grid.Column="2" />
+        <local:SideBar />
+        <local:PictureView Grid.Column="1" />
+        <local:ThingsBetwixt Grid.Column="2" />
+        <local:PictureView Grid.Column="3" />
     </Grid>
 </Window>
